--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 54px 32px 75px 32px;
 }
 
 .testimonial-text-container {
